<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SCM Test App 1</string>
    <string name="channel1_label">Channel 1 value:</string>
    <string name="channel2_label">Channel 2 value:</string>
    <string name="channel3_label">Channel 3 value:</string>
    <string name="poweron_label">Power on</string>
    <string name="poweroff_label">Power off</string>
    <string name="zero_text">0.00</string>
    <string name="storageBtn_label">CLICK</string>
    <string name="mn_config_label">Settings</string>
    <string name="mn_reset_label">Reset config</string>
    <string name="pw_red_label">Red pulse width:</string>
    <string name="pw_green_label">Green pulse width:</string>
    <string name="pw_blue_label">Blue pulse width:</string>
    <string name="pw_focus_label">Focus pulse width:</string>
    <string name="led_default_pwm">1000</string>
    <string name="led_powers_label">Led PWM values</string>
    <string name="channel1_conf_key">CONF_CHANNEL1</string>
    <string name="channel2_conf_key">CONF_CHANNEL2</string>
    <string name="channel3_conf_key">CONF_CHANNEL3</string>
    <string name="channel_white_conf_key">CONF_CHANNEL_WHITE</string>
</resources>
