<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".ScmTest1" android:id="@+id/RootFrame">

            <com.softanalle.scmctrls.LedIndicator
                android:id="@+id/ledIndicator1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="top|left" >

        </com.softanalle.scmctrls.LedIndicator>

            <ToggleButton
                android:id="@+id/ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_margin="5dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="51dp"
                android:textOff="@string/poweroff_label"
                android:textOn="@string/poweron_label" />

            <Button
                android:id="@+id/pictureButton"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom|right"
                android:layout_margin="5dp"
                android:layout_marginRight="14dp"
                android:text="@string/storageBtn_label" />
    
</FrameLayout>